--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ordenacao_topologica C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(main main.c ordenacao_topologica.c helper.c grafo.c)
+add_executable(main main.c ordenacao_topologica.c helper.c grafo.c queue.c queue.h)
